[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/main_container/left_container/connections_list/connection_settings/ping.gd" type="Script" id=1]
[ext_resource path="res://scenes/main_container.tres" type="Theme" id=2]
[ext_resource path="res://scenes/utility/python_watcher/PythonWatcher.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/main_container/left_container/connections_list/connection_settings/result.gd" type="Script" id=5]
[ext_resource path="res://images/icon_visibility_hidden.svg" type="Texture" id=6]
[ext_resource path="res://scenes/main_container/left_container/connections_list/connection_settings/connection_settings.gd" type="Script" id=7]
[ext_resource path="res://scenes/main_container/left_container/connections_list/connection_settings/settings.gd" type="Script" id=8]
[ext_resource path="res://images/icon_action_copy.svg" type="Texture" id=9]

[node name="ConnectionSettings" type="WindowDialog"]
margin_right = 512.0
margin_bottom = 334.0
theme = ExtResource( 2 )
popup_exclusive = true
window_title = "Create connection"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Organization" type="HBoxContainer" parent="Container"]
margin_right = 512.0
margin_bottom = 22.0

[node name="NameLabel" type="Label" parent="Container/Organization"]
margin_right = 50.0
margin_bottom = 22.0
text = "Name:"

[node name="NameInput" type="LineEdit" parent="Container/Organization"]
margin_left = 54.0
margin_right = 512.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Settings" type="TabContainer" parent="Container"]
margin_top = 26.0
margin_right = 512.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
script = ExtResource( 8 )

[node name="Basic" type="HBoxContainer" parent="Container/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Label" type="VBoxContainer" parent="Container/Settings/Basic"]
margin_right = 64.0
margin_bottom = 220.0

[node name="Connection" type="Label" parent="Container/Settings/Basic/Label"]
margin_right = 64.0
margin_bottom = 22.0
text = "Connect:"

[node name="Host" type="Label" parent="Container/Settings/Basic/Label"]
margin_top = 26.0
margin_right = 64.0
margin_bottom = 48.0
text = "Host:"

[node name="Port" type="Label" parent="Container/Settings/Basic/Label"]
margin_top = 52.0
margin_right = 64.0
margin_bottom = 74.0
text = "Port:"

[node name="Input" type="VBoxContainer" parent="Container/Settings/Basic"]
margin_left = 68.0
margin_right = 502.0
margin_bottom = 220.0
size_flags_horizontal = 3

[node name="Connection" type="OptionButton" parent="Container/Settings/Basic/Input"]
margin_right = 434.0
margin_bottom = 22.0
text = "Single server"
items = [ "Single server", null, false, 0, null, "DNS seedlist", null, false, 1, null ]
selected = 0

[node name="Host" type="LineEdit" parent="Container/Settings/Basic/Input"]
margin_top = 26.0
margin_right = 434.0
margin_bottom = 48.0

[node name="Port" type="LineEdit" parent="Container/Settings/Basic/Input"]
margin_top = 52.0
margin_right = 434.0
margin_bottom = 74.0

[node name="Authentication" type="HBoxContainer" parent="Container/Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Label" type="VBoxContainer" parent="Container/Settings/Authentication"]
margin_right = 78.0
margin_bottom = 220.0

[node name="Username" type="Label" parent="Container/Settings/Authentication/Label"]
margin_right = 78.0
margin_bottom = 22.0
text = "Username:"

[node name="Password" type="Label" parent="Container/Settings/Authentication/Label"]
margin_top = 26.0
margin_right = 78.0
margin_bottom = 48.0
text = "Password:"

[node name="Separator" type="HSeparator" parent="Container/Settings/Authentication/Label"]
margin_top = 52.0
margin_right = 78.0
margin_bottom = 56.0

[node name="Database" type="Label" parent="Container/Settings/Authentication/Label"]
margin_top = 60.0
margin_right = 78.0
margin_bottom = 82.0
text = "Database:"

[node name="Input" type="VBoxContainer" parent="Container/Settings/Authentication"]
margin_left = 82.0
margin_right = 502.0
margin_bottom = 220.0
size_flags_horizontal = 3

[node name="Username" type="LineEdit" parent="Container/Settings/Authentication/Input"]
margin_right = 420.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="LineEdit" parent="Container/Settings/Authentication/Input"]
margin_top = 26.0
margin_right = 420.0
margin_bottom = 48.0
secret = true

[node name="Separator" type="HSeparator" parent="Container/Settings/Authentication/Input"]
margin_top = 52.0
margin_right = 420.0
margin_bottom = 56.0

[node name="Database" type="LineEdit" parent="Container/Settings/Authentication/Input"]
margin_top = 60.0
margin_right = 420.0
margin_bottom = 82.0

[node name="SSL" type="HBoxContainer" parent="Container/Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Label" type="VBoxContainer" parent="Container/Settings/SSL"]
margin_right = 33.0
margin_bottom = 220.0

[node name="SSL" type="Label" parent="Container/Settings/SSL/Label"]
margin_right = 33.0
margin_bottom = 22.0
text = "SSL:"

[node name="Input" type="VBoxContainer" parent="Container/Settings/SSL"]
margin_left = 37.0
margin_right = 502.0
margin_bottom = 220.0
size_flags_horizontal = 3

[node name="SSL" type="OptionButton" parent="Container/Settings/SSL/Input"]
margin_right = 465.0
margin_bottom = 22.0
text = "None"
items = [ "None", null, false, 0, false, "Any certificate", null, false, 0, false ]
selected = 0

[node name="SSH" type="HBoxContainer" parent="Container/Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Others" type="HBoxContainer" parent="Container/Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Result" type="HBoxContainer" parent="Container"]
margin_top = 284.0
margin_right = 512.0
margin_bottom = 308.0
script = ExtResource( 5 )

[node name="View" type="Button" parent="Container/Result"]
margin_right = 28.0
margin_bottom = 24.0
hint_tooltip = "View/Hide URI"
toggle_mode = true
icon = ExtResource( 6 )

[node name="URI" type="LineEdit" parent="Container/Result"]
margin_left = 32.0
margin_right = 480.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
secret = true

[node name="Copy" type="Button" parent="Container/Result"]
margin_left = 484.0
margin_right = 512.0
margin_bottom = 24.0
hint_tooltip = "Copy URI"
icon = ExtResource( 9 )

[node name="Actions" type="HBoxContainer" parent="Container"]
margin_top = 312.0
margin_right = 512.0
margin_bottom = 334.0

[node name="Ping" type="HBoxContainer" parent="Container/Actions"]
margin_right = 178.0
margin_bottom = 22.0
script = ExtResource( 1 )

[node name="TestConnection" type="Button" parent="Container/Actions/Ping"]
margin_right = 114.0
margin_bottom = 22.0
text = "Test connection"

[node name="Output" type="LineEdit" parent="Container/Actions/Ping"]
margin_left = 118.0
margin_right = 178.0
margin_bottom = 22.0
editable = false

[node name="PythonWatcher" parent="Container/Actions/Ping" instance=ExtResource( 3 )]

[node name="Space" type="HSplitContainer" parent="Container/Actions"]
margin_left = 182.0
margin_right = 409.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Save" type="Button" parent="Container/Actions"]
margin_left = 413.0
margin_right = 454.0
margin_bottom = 22.0
text = "Save"

[node name="Cancel" type="Button" parent="Container/Actions"]
margin_left = 458.0
margin_right = 512.0
margin_bottom = 22.0
text = "Cancel"

[connection signal="about_to_show" from="." to="." method="_on_ConnectionSettings_about_to_show"]
[connection signal="item_selected" from="Container/Settings/Basic/Input/Connection" to="." method="_on_Input_changed"]
[connection signal="text_changed" from="Container/Settings/Basic/Input/Host" to="." method="_on_Input_changed"]
[connection signal="text_changed" from="Container/Settings/Basic/Input/Port" to="." method="_on_Input_changed"]
[connection signal="text_changed" from="Container/Settings/Authentication/Input/Username" to="." method="_on_Input_changed"]
[connection signal="text_changed" from="Container/Settings/Authentication/Input/Password" to="." method="_on_Input_changed"]
[connection signal="text_changed" from="Container/Settings/Authentication/Input/Database" to="." method="_on_Input_changed"]
[connection signal="item_selected" from="Container/Settings/SSL/Input/SSL" to="." method="_on_Input_changed"]
[connection signal="toggled" from="Container/Result/View" to="Container/Result" method="_on_View_toggled"]
[connection signal="pressed" from="Container/Result/Copy" to="Container/Result" method="_on_Copy_pressed"]
[connection signal="hide" from="Container/Actions/Ping" to="Container/Actions/Ping" method="_on_Ping_hide"]
[connection signal="pressed" from="Container/Actions/Ping/TestConnection" to="." method="_on_TestConnection_pressed"]
[connection signal="output" from="Container/Actions/Ping/PythonWatcher" to="Container/Actions/Ping" method="_on_PythonWatcher_output"]
[connection signal="pressed" from="Container/Actions/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Container/Actions/Cancel" to="." method="_on_Cancel_pressed"]
